using clap to parse args

--- a/wfc/Cargo.toml
+++ b/wfc/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2021"
 [dependencies]
 macroquad = "0.4.13"
 instant = "0.1"
+clap = { version = "4.5.17", features = ["derive"] }
 
 # rayon = "1.10.0"
